# Event_Reminder_Management_System

./: README.md  auth.py  database.py  main.py  pyproject.toml  requirements.txt  schemas.py  utils.py
